k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
  labels:
    app: microservice-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: microservice-app
